--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
- 
+FEISHU_APP_ID=cli_xxxx
+FEISHU_APP_SECRET=xxxx
+OPENAI_API_KEY=sk-xxxx
+OPENAI_BASE_URL=https://api.ai-gaochao.cn/v1
+MODEL=gpt-4o
+MAX_TOKENS=4096
+TEMPERATURE=0.8
+BOT_NAME=ChatGPT4 
