--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 FEISHU_APP_ID=cli_xxxx
 FEISHU_APP_SECRET=xxxx
 OPENAI_API_KEY=sk-xxxx
-OPENAI_BASE_URL=https://api.ai-gaochao.cn/v1
+OPENAI_BASE_URL=https://api.openai.com/v1
 MODEL=gpt-4o
 MAX_TOKENS=4096
 TEMPERATURE=0.8
